Changed images, and some layout

--- a/index.html
+++ b/index.html
@@ -204,17 +204,23 @@
 
                 <div class="service-cont d-flex align-items-center justify-content-around w-100">
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="assets/service-dummy.png">
+                        <div class="service-item-cont">
+                            <img src="assets/line-inspection.png">
+                        </div>
                         <span class="text-white my-3">Quality Line Inspection</span>
                     </div>
 
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="assets/service-dummy.png">
+                        <div class="service-item-cont">
+                            <img src="assets/packing.png">
+                        </div>
                         <span class="text-white my-3">Packing/Sorting</span>
                     </div>
 
                     <div class="service-item d-flex flex-column align-items-center justify-content-center">
-                        <img src="assets/service-dummy.png">
+                        <div class="service-item-cont">
+                            <img src="assets/warehousing.png">
+                        </div>
                         <span class="text-white my-3">Warehousing</span>
                     </div>
                 </div>
@@ -223,30 +229,38 @@
 
                 <div class="mobile-service row">
                     <div class="col-6 mobile-item">
-                        <img src="assets/mobile-service.png">
+                        <div class="mobile-item-img">
+                            <img src="assets/line-inspection.png">
+                        </div>
                         <span>
                             QUALITY LINE INSPECTION
                         </span>
                     </div>
                     <div class="col-6 mobile-item">
-                        <img src="assets/mobile-service.png">
+                        <div class="mobile-item-img">
+                            <img src="assets/packing.png">
+                        </div>
                         <span>
-                            PACKING/SORTING
+                            PACKING / SORTING
                         </span>
                     </div>
-                    <div class="col-6 mobile-item">
-                        <img src="assets/mobile-service.png">
+                    <div class="col-6 mb-5 mobile-item">
+                        <div class="mobile-item-img">
+                            <img src="assets/warehousing.png">
+                        </div>
                         <span>
                             WAREHOUSING
                         </span>
                     </div>
-                    <div class="col-6 mobile-item">
-                        <img src="assets/mobile-service.png">
+                    <div class="col-6 mb-5 mobile-item">
+                        <div class="mobile-item-img">
+                            <img src="assets/engineering.png">
+                        </div>
                         <span>
-                            ENGINEERING MAINTENANCE
+                            ENGINEERING / MAINTENANCE
                         </span>
                     </div>
-                    <div class="col-6 mobile-item">
+                    <!-- <div class="col-6 mobile-item">
                         <img src="assets/mobile-service.png">
                         <span>
                             SERVICES DUMMY
@@ -263,7 +277,7 @@
                         <span>
                             SERVICES DUMMY
                         </span>
-                    </div>
+                    </div> -->
                 </div>
 
                 <button>
