--- a/services.html
+++ b/services.html
@@ -138,13 +138,16 @@
             <div class="row">
                 <div class="col-md-12 mb-5">
                     <div class="card card-div">
-                        <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
+                        <img src="assets/line-inspection.png" class="card-img-top" alt="Image 1">
                         <div class="card-body">
-                            <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                            <p class="card-text">Our factory support team ensures top product quality and safety by
-                                conducting thorough inspections at each production stage, maintaining consistency and
-                                preventing defects to deliver. Additionally, they handle packing and sorting, ensuring
-                                accurate categorization and packaging for distribution. </p>
+                            <h5 class="card-title">FACTORY SUPPORT</h5>
+                            <p class="card-text">Our factory support team ensures top product quality and safety. They
+                                conduct thorough inspections at each production stage, maintaining consistency and
+                                preventing defects to deliver only the highest quality products. Our team screens
+                                in-process materials and finished goods to meet specific quality standards and comply
+                                with food safety regulations. Additionally, they handle packing and sorting, ensuring
+                                accurate categorization and packaging for distribution. Our factory support team upholds
+                                the highest industry standards through stringent quality control.</p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
                                 <button class="card-button btn" type="button" data-toggle="modal"
                                     data-target="#myModal">
@@ -156,13 +159,49 @@
                 </div>
                 <div class="col-md-12 mb-5">
                     <div class="card card-div">
-                        <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
+                        <img src="assets/warehousing.png" class="card-img-top" alt="Image 1">
                         <div class="card-body">
-                            <h5 class="card-title">WAREHOUSE AND MATERIALS HANDLING</h5>
+                            <h5 class="card-title">WAREHOUSING</h5>
                             <p class="card-text">We facilitate the efficient storage, handling, and distribution of
                                 goods within your supply chain. Our warehousing solutions are designed to optimize
                                 space, improve inventory management, and ensure timely dispatch, providing a seamless
-                                flow of materials and products. </p>
+                                flow of materials and products</p>
+                            <div class="card-button-col w-100 d-flex justify-content-end">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
+                                    MORE INFO
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-5">
+                    <div class="card card-div">
+                        <img src="assets/facility.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body">
+                            <h5 class="card-title">FACILITY MAINTENANCE</h5>
+                            <p class="card-text">Facility maintenance encompasses a wide range of tasks, including
+                                repair, upkeep, and preventive measures. Our comprehensive services cover various
+                                aspects such as building systems, equipment, grounds, and utilities, ensuring your
+                                facilities remain in top condition and operationally efficient.</p>
+                            <div class="card-button-col w-100 d-flex justify-content-end">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
+                                    MORE INFO
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-5">
+                    <div class="card card-div">
+                        <img src="assets/engineering.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body">
+                            <h5 class="card-title">ENGINEERING MAINTENANCE</h5>
+                            <p class="card-text">Our engineering maintenance services ensure the optimal performance and
+                                longevity of your industrial equipment, machinery, and infrastructure. We provide
+                                regular maintenance, repairs, and upgrades to keep your operations running smoothly and
+                                minimize downtime.</p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
                                 <button class="card-button btn" type="button" data-toggle="modal"
                                     data-target="#myModal">
@@ -181,9 +220,9 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="card card-div">
-                                <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
+                                <img src="assets/line-inspection.png" class="card-img-top" alt="Image 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
+                                    <h5 class="card-title">FACTORY SUPPORT</h5>
                                     <p class="card-text">Our factory support team ensures top product quality and
                                         safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
@@ -200,11 +239,11 @@
                         </div>
                         <div class="col-md-3">
                             <div class="card card-div">
-                                <img src="assets/about-1.png" class="card-img-top" alt="Image 2">
+                                <img src="assets/warehousing.png" class="card-img-top" alt="Image 2">
                                 <div class="card-body">
-                                    <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and
-                                        safety. They conduct thorough inspections at...</p>
+                                    <h5 class="card-title">WAREHOUSING</h5>
+                                    <p class="card-text">We facilitate the efficient storage, handling, and distribution
+                                        of goods within your supply chain. Our warehousing solutions are...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -219,11 +258,11 @@
                         </div>
                         <div class="col-md-3">
                             <div class="card card-div">
-                                <img src="assets/about-1.png" class="card-img-top" alt="Image 3">
+                                <img src="assets/engineering.png" class="card-img-top" alt="Image 3">
                                 <div class="card-body">
-                                    <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and
-                                        safety. They conduct thorough inspections at...</p>
+                                    <h5 class="card-title">ENGINEERING MAINTENANCE</h5>
+                                    <p class="card-text">Our engineering maintenance services ensure the optimal
+                                        performance and longevity of...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -238,11 +277,11 @@
                         </div>
                         <div class="col-md-3">
                             <div class="card card-div">
-                                <img src="assets/about-1.png" class="card-img-top" alt="Image 4">
+                                <img src="assets/facility.png" class="card-img-top" alt="Image 4">
                                 <div class="card-body">
-                                    <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and
-                                        safety. They conduct thorough inspections at...</p>
+                                    <h5 class="card-title">FACILITY MAINTENANCE</h5>
+                                    <p class="card-text">Facility maintenance encompasses a wide range of tasks,
+                                        including repair, upkeep, and preventive measures...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -257,7 +296,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <div class="row">
                         <div class="col-md-3">
                             <div class="card card-div">
@@ -336,7 +375,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
